--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -7,8 +7,8 @@ Add your content here.
 
 = Videos =
 
-<wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin.xml" width="480" height="385" /> 
+*Introduction to redtamarin*
+<wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin.xml" width="480" height="385" />
+<wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin-script.xml" width="600" height="400" />
 
-= Text =
-
-Introduction to redtamarin
+links: [http://uk.youtube.com/watch?v=5Wy0_bVJKkk video] [http://docs.google.com/View?docID=dcfgjs6p_215gbt7vwd8 script]
