--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -4,7 +4,6 @@
 = Videos =
 
 *Introduction to redtamarin*
-<wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin.xml" width="480" height="385" />
-<wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin-script.xml" width="600" height="400" />
+|| <wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin.xml" width="480" height="385" /> || <wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin-script.xml" width="600" height="400" /> ||
 
 links: [http://uk.youtube.com/watch?v=5Wy0_bVJKkk video] [http://docs.google.com/View?docID=dcfgjs6p_215gbt7vwd8 script]
