Edited wiki page through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,6 +1,8 @@
   * [Main ↑ Home]
   * [FAQ FAQ]
   * [Coders Programming redtamarin]
-  
+  * [API API reference]
+    * [StandardC C Standard Libraries]
+    * [FlashPlatform Flash Platform APIs]
   * [Examples Examples]
   
