--- a/wiki/StandardC.wiki
+++ b/wiki/StandardC.wiki
@@ -14,14 +14,16 @@ The goal is to be able to call from AS3 the following libraries
    * Mac OS X (gcc 3.3)
    * Microsoft Windows Runtime Library (MS VIsual C++ 7.0)
    * Linux (gcc 3.2.2)
- unistd.h, windows.h, etc.<br>
+ unistd.h, dirent.h, etc.<br>
  see: http://www.crossplatformbook.com/posix.html
 
 references:
  * http://en.wikipedia.org/wiki/ANSI_C
  * http://en.wikipedia.org/wiki/POSIX
+ * http://en.wikipedia.org/wiki/C_POSIX_library
  * http://en.wikipedia.org/wiki/Category:C_standard_library
  * http://www.cplusplus.com/reference/clibrary/
+
 
 example:
 {{{
@@ -41,6 +43,14 @@ var test:String = getenv( "HOME" );
 
 }}}
 
+
+advantages:
+
+ * the cross-plaform part is done in the native part (C/C++) of the avmshell
+ so you don't need to bother about it in AS3.
+ * most of the function signatures are equivalent,
+ so you don't need to re-learn how to use those functions
+ or really have little to learn.
 
 === Implemented ===
 
