Edited wiki page through web user interface.

--- a/wiki/FlashPlatform.wiki
+++ b/wiki/FlashPlatform.wiki
@@ -15,11 +15,22 @@ a plus sign `+` indicate a property existing in redtamarin but not in the flash 
  * package *flash.errors*
  {{{
 public dynamic class IOError;
+
 public dynamic class EOFError;
+
 public dynamic class IllegalOperationError;
+
 public dynamic class MemoryError;
+
 public dynamic class ScriptTimeoutError;
+
 public dynamic class StackOverflowError;
+
+-public dynamic class InvalidSWFError;
+
+-public class SQLError;
+
+-public class SQLErrorOperation;
  }}}
 
  * package *flash.utils*
@@ -100,14 +111,75 @@ public class Endian;
 -public class Proxy;
 
 -public class Timer;
-
  }}}
 
  * package *flash.system*
  {{{
+-public function fscommand(command:String, args:String = ""):void;
+
+public final class ApplicationDomain;
+  public static function get currentDomain():ApplicationDomain;
+  public function get domainMemory():ByteArray;
+  public function set domainMemory( value:ByteArray ):void;
+  public static function get MIN_DOMAIN_MEMORY_LENGTH():uint;
+  public function get parentDomain():ApplicationDomain;
+  public function getDefinition( name:String ):Object;
+  public function hasDefinition( name:String ):Boolean;
+
+public final class Capabilities;
+  public static function get avHardwareDisable():Boolean;
+  public static function get hasAccessibility():Boolean;
+  public static function get hasAudio():Boolean;
+  public static function get hasAudioEncoder():Boolean;
+  public static function get hasEmbeddedVideo():Boolean;
+  public static function get hasIME():Boolean;
+  public static function get hasMP3():Boolean;
+  public static function get hasPrinting():Boolean;
+  public static function get hasScreenBroadcast():Boolean;
+  public static function get hasScreenPlayback():Boolean;
+  public static function get hasStreamingAudio():Boolean;
+  public static function get hasTLS():Boolean;
+  public static function get hasVideoEncoder():Boolean;
+  public static function get isDebugger():Boolean;
+  public static function get isEmbeddedInAcrobat():Boolean;
+  public static function get language():String;
+  public static function get languages():Array;
+  public static function get localFileReadDisable():Boolean;
+  public static function get manufacturer():String;
+  public static function get maxLevelIDC():String;
+  public static function get os():String;
+  public static function get pixelAspectRatio():Number;
+  public static function get playerType():String;
+  public static function get screenColor():String;
+  public static function get screenDPI():Number;
+  public static function get screenResolutionX():Number;
+  public static function get screenResolutionY():Number;
+  public static function get serverString():String;
+  public static function get version():String;
+
+-public final class IME;
+
+-public final class IMEConversionMode;
+
+-public class JPEGLoaderContext;
+
+-public class LoaderContext;
+
+-public final class Security;
+
+-public class SecurityDomain;
+
+-public final class SecurityPanel;
+
 public final class System;
+ -public static function get ime():IME;
   public static function get totalMemory():uint;
+ -public static function get useCodePage():Boolean;
+ -public function set useCodePage(value:Boolean):void;
   public static function get vmVersion():String;
   public static function exit( code:uint ):void;
   public static function gc():void;
+ -public static function pause():void;
+ -public static function resume():void;
+ -public static function setClipboard(string:String):void;
  }}}
