Edited wiki page through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -4,5 +4,6 @@
   * [API API reference]
     * [StandardC C Standard Libraries]
     * [FlashPlatform Flash Platform APIs]
+    * [AVMPlus AVMPlus APIs]
   * [Examples Examples]
   
