--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,5 +1,7 @@
   * [Main ↑ Home]
   * [FAQ FAQ]
+  * [Users Working with redtamarin]
+    * [GettingStarted Getting Started]
   * [Coders Programming redtamarin]
     * [NativeClasses HOWTO work with Native Classes]
     * [IDE HOWTO Setup your IDE]
