--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -13,7 +13,7 @@ Also, messing a little too much with the Tamarin source code, I ended up having 
 
 Since the Tamarin release *703:2cee46be9ce0* ([https://developer.mozilla.org/En/Tamarin/Tamarin_Releases 02/12/2008]), I decided to make it cleaner.
 
-Now from redtamarin v0.2, the source code of Tamarin is fully sync'ed in this project repository, and as the C/C++ is better organized, update etc. should stay clean in the forseen futur :).
+Now from redtamarin v0.2, the source code of Tamarin is fully sync'ed in this project repository, and as the C/C++ is better organized, update etc. should stay clean in the  futur :).
 
 The code is currently tested and compiled on those systems:
  * Mac OS X 10.5.6 (gcc+make and xcode)
