--- a/wiki/Coders.wiki
+++ b/wiki/Coders.wiki
@@ -1,3 +1,3 @@
 #summary Programming redtamarin.
 
-everyting you need to know to compile, setup, etc.
+everything you need to know to compile, setup, etc.
